--- a/package.json
+++ b/package.json
@@ -1,24 +1,64 @@
 {
-  "name": "notes",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.4"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
-  }
+    "name": "notes",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@ai-sdk/google": "^0.0.24",
+        "@auth/drizzle-adapter": "^1.4.1",
+        "@hookform/resolvers": "^3.6.0",
+        "@nanostores/react": "github:ai/react",
+        "@radix-ui/react-avatar": "^1.1.0",
+        "@radix-ui/react-checkbox": "^1.1.1",
+        "@radix-ui/react-dialog": "^1.1.1",
+        "@radix-ui/react-dropdown-menu": "^2.1.1",
+        "@radix-ui/react-label": "^2.1.0",
+        "@radix-ui/react-separator": "^1.1.0",
+        "@radix-ui/react-slot": "^1.1.0",
+        "@radix-ui/react-toast": "^1.2.1",
+        "@tanstack/react-table": "^8.19.2",
+        "@tiptap/extension-bold": "^2.4.0",
+        "@tiptap/extension-color": "^2.4.0",
+        "@tiptap/extension-text": "^2.4.0",
+        "@tiptap/extension-text-style": "^2.4.0",
+        "@tiptap/pm": "^2.4.0",
+        "@tiptap/react": "^2.4.0",
+        "@tiptap/starter-kit": "^2.4.0",
+        "ai": "^3.2.16",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.1",
+        "dotenv": "^16.4.5",
+        "drizzle-orm": "^0.31.2",
+        "framer-motion": "^11.2.13",
+        "lucide-react": "^0.399.0",
+        "mini-svg-data-uri": "^1.4.4",
+        "next": "14.2.4",
+        "next-auth": "^5.0.0-beta.19",
+        "next-themes": "^0.3.0",
+        "postgres": "^3.4.4",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "react-hook-form": "^7.52.0",
+        "react-icons": "^5.2.1",
+        "simplex-noise": "^4.0.1",
+        "tailwind-merge": "^2.3.0",
+        "tailwindcss-animate": "^1.0.7",
+        "zod": "^3.23.8"
+    },
+    "devDependencies": {
+        "@tailwindcss/typography": "^0.5.13",
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "drizzle-kit": "^0.22.8",
+        "pg": "^8.12.0",
+        "postcss": "^8",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5"
+    }
 }
